--- a/index.html
+++ b/index.html
@@ -1,6 +1,40 @@
 <html>
-<title>My github Page</title>
+
+<head>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="styles.css">
+
+    <title>Bhavish Assai</title>
+</head>
 
 <body>
-    <center>Hey there</center>
+    <div class="header">
+
+
+        <a>Home</a>
+        <a>Projects</a>
+        <a>Internal Papers</a>
+
+
+
+    </div>
 </body>
+
+
+<table>
+
+    <th>
+    <td>
+        <img class="circleAvatar" src="myprofile.jpg" alt="Image not found">
+    </td>
+    <td>
+        <h1>Hey there!<br> Its me Bhavish</h1>
+    </td>
+    </th>
+
+</table>
+
+
+
+
+</html>
