--- a/index.html
+++ b/index.html
@@ -1,10 +1,24 @@
 <!DOCTYPE html>
-<html>
-<head>
-  <meta charset="UTF-8">
-  <title>portfolio</title>
-</head>
-<body>
-  <script src="main.dart.js" type="application/javascript"></script>
-</body>
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <title>ONE STEP</title>
+      <link rel="stylesheet" type="text/css" href="styles.css"</link>
+  </head>
+
+  <body>
+
+    <div class="header">
+      <a class="logo" href="#LOGO" >ONE STEP</a>
+      <div class="header-right">
+        <a class="active" href="#home">HOME</a>
+        <a href="#contact">COURSES</a>
+        <a href="#about">PRICING</a>
+        <a href="#contact">CONTACT US</a>
+      </div>
+    </div>
+
+    <img src="home-img.jpg"</img>
+
+  </body>
 </html>
